test: update create comment test
