# backend/docs/swagger.json
@@ -281,14 +281,10 @@
         "models.PostCreateRequest": {
             "type": "object",
             "required": [
-                "authorID",
                 "content",
                 "tags"
             ],
             "properties": {
-                "authorID": {
-                    "type": "string"
-                },
                 "content": {
                     "type": "string"
                 },
